corrected the login text on mobile view

--- a/client/src/Pages/HomePage/hp.css
+++ b/client/src/Pages/HomePage/hp.css
@@ -60,9 +60,11 @@
         margin-top: -15px;
         margin-bottom: 30px;
         width: 100%;
+        display: inline;
     }
     
     .clientText {
         width: 100%;
+        display: inline;
     }
 }
